--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "lucide": "^0.525.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "phosphor-react": "^1.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "prisma": "^6.12.0",
     "tailwindcss": "^4"
   }
 }
